# rust_ijvm

./: .gitattributes  .gitignore  Cargo.toml  README.md
ijsm_x86/: Cargo.toml
ijvm/: Cargo.toml
ijvm_core/: Cargo.toml
ijvm_core/src/: instructions.rs  lib.rs  parse.rs
ijvm_core/tests/: integration_tests.rs
ijvm_x86/: Cargo.toml
ijvm_x86/src/: lib.rs
