[package]
name = "ijvm_core"
version = "0.1.0"
authors = ["Brian Heylin <git@heylin.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# num is only used to support enum_primitive
[dependencies.num]
version = "0.2.1"

# enum_primitive is only used to convert a byte to Instruction enum
# remove both num and enum_primitive when Rust supports safe byte to enum conversion natively 
[dependencies.enum_primitive]
version = "*"
